# CLE-Assignment02

./: .gitignore  CMakeLists.txt  LICENSE  README.md  present.pptx
prog1/: consts.h  main.c  main.h  makefile  prog1.c  prog1.h  textProcessing.c  textProcessing.h  utf8character.c  utf8character.h  utils.c  utils.h
prog2/: consts.h  main.c  main.h  makefile  prog2  prog2.c  prog2.h  sorting.c  sorting.h  utils.c  utils.h
